# BRRR

./: Cargo.toml  README.md  build.rs
src/: bloom.rs  correction.rs  dashbloom.rs  kmer.rs  lock.rs  main copy.rs  main.rs  minimizer.rs  mutation.rs  reads.rs
