[package]
name = "brrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
num-traits = "0.2.15"
rustc-hash = "1.1.0"
seq_io = "0.4.0-alpha.0"

[profile.dev]
opt-level = 1
lto = true
incremental = true

[profile.release]
opt-level = 3
lto = true
incremental = true
